# Zeta_function

./: CMakeLists.txt  README.md  github_save.sh  github_save_RZF.sh
Calculations/: Bernoulli Numbers.cpp  Stirling numbers of the second kind.cpp  complex_cal.cpp
Function/: Zeta_Euler.cpp  Zeta_Reimann(complex).cpp
Graph/: Reimann Zeta sorting.cpp
